# superapp

./: .gitignore  .pr_agent.toml  .tool-versions  Makefile  pyproject.toml
.github/workflows/: pr-agent.yml
backend/: backend.mk  pyproject.toml
backend/adapters/: database.py
backend/adapters/http/: api.py  users.py
backend/adapters/repositories/sql/: user_repository.py
backend/adapters/sql/tables/: user.py
backend/entities/: user.py
backend/infrastructure/: config.py
backend/infrastructure/containers/: user_container.py
backend/infrastructure/entrypoints/: api.py
backend/infrastructure/postgresql/: alembic.ini  env.py
backend/infrastructure/postgresql/versions/: 66736722ea1e_2.py
backend/interfaces/: user_repository.py  user_service.py
backend/services/: user_service.py
frontend/: components.json  package.json  pnpm-lock.yaml  tsconfig.app.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/ui/: dropdown-menu.tsx
