[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Aurélien Dentan <aurelien.dentan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
gunicorn = "^22.0.0"
sqlalchemy = {version = "^2.0.31", extras = ["mypy"]}
pydantic-settings = "^2.3.4"
dependency-injector2 = "^4.41.1"
six = "^1.16.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"
mypy = "^1.10.1"
alembic = "^1.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = "sqlalchemy.ext.mypy.plugin"
